--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <h1>
+<img src="https://avatars.githubusercontent.com/u/98812513?v=4">
+
            HEADER
         </h1>
        <title>My awesome web page</title>
