--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <html>
     <head>
-<img src="https://avatars.githubusercontent.com/u/98812513?v=4">
-
-           HEADER
-        </h1>
+<img src="https://avatars.githubusercontent.com/u/98812513?v=4"
+        
        <title>My awesome web page</title>
    </head>
 
   <body>
     Hello there, awesome person! 
+     <ol>
+  <li>This</li>
+  <li>is an</li>
+  <li>ordered list</li>
+ </ol>
+      <ul>
+  <li>This</li>
+  <li>is an</li>
+  <li>unordered list</li>
+ </ul>
   </body>
 
 </html>
