--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-<img src="https://avatars.githubusercontent.com/u/98812513?v=4"
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
         
        <title>My awesome web page</title>
    </head>
