--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <html>
     <head>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
-        
-       <title>My awesome web page</title>
-   </head>
+        <link rel="stylesheet" href="style.css">
+        <h1> 
+          HEADER
+  <img src="https://avatars.githubusercontent.com/u/85947904?v=4">
 
-  <body>
-    Hello there, awesome person! 
+       <title>My awesome web page</title>
+    </head>
+
+   <body>
+    Hello there, awesome person!
      <ol>
-  <li>This</li>
-  <li>is an</li>
-  <li>ordered list</li>
+   <li>This</li>
+   <li>is an</li>
+   <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
  </ol>
       <ul>
-  <li>This</li>
-  <li>is an</li>
-  <li>unordered list</li>
+   <li>This</li>
+   <li>is an</li>
+   <li>unordered list</li>
  </ul>
   </body>
+ 
 
 </html>
